--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -24,7 +24,7 @@
 </form>
 {{/if}}
 
-{{> comments post.comments}}
+{{> comments post.Comments}}
 
 {{#if loggedIn}}
 <script src="/javascript/comment.js"></script>
